--- a/VSCodeUserSettings.json
+++ b/VSCodeUserSettings.json
@@ -1,40 +1,36 @@
 {
-  "files.encoding": "utf8bom",
-  "files.eol": "\n",
-  "liveServer.settings.donotShowInfoMsg": true,
-  "liveServer.settings.donotVerifyTags": true,
-  "explorer.confirmDragAndDrop": false,
-  "terminal.integrated.rendererType": "dom",
-  "typescript.updateImportsOnFileMove.enabled": "always",
+  "window.zoomLevel": 0,
   "workbench.colorTheme": "Atom One Dark",
-  "window.zoomLevel": 1,
-  "workbench.iconTheme": "vscode-icons",
-  "javascript.preferences.quoteStyle": "single",
-  "prettier.singleQuote": true,
-  "prettier.eslintIntegration": true,
-  "editor.renderWhitespace": "all",
+  "editor.tabSize": 2,
+  "editor.fontSize": 18,
+  "editor.fontWeight": "100",
   "editor.useTabStops": true,
+  "editor.formatOnSave": true,
+  "editor.tabCompletion": "on",
+  "editor.fontLigatures": true,
+  "editor.renderWhitespace": "all",
+  "editor.trimAutoWhitespace": true,
+  "editor.snippetSuggestions": "top",
+  "editor.quickSuggestions": { "other": true },
+  "explorer.confirmDragAndDrop": false,
+  "debug.console.fontSize": 16,
+  "markdown.preview.fontSize": 16,
+  "terminal.integrated.fontSize": 16,
+  "terminal.integrated.rendererType": "dom",
+  "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
+  "typescript.updateImportsOnFileMove.enabled": "never",
+  "workbench.iconTheme": "vscode-icons",
+  "files.eol": "\n",
+  "files.autoSave": "off",
+  "files.encoding": "utf8bom",
   "files.insertFinalNewline": true,
   "files.trimTrailingWhitespace": true,
-  "editor.tabSize": 2,
-  "files.autoSave": "off",
-  "editor.formatOnSave": true,
-  "workbench.startupEditor": "welcomePage",
-  "npm.packageManager": "yarn",
-  "javascript.updateImportsOnFileMove.enabled": "never",
-  "eslint.packageManager": "yarn",
-  "editor.minimap.maxColumn": 80,
-  "eslint.alwaysShowStatus": true,
-  "eslint.autoFixOnSave": true,
-  "tslint.enable": true,
-  "tslint.alwaysShowStatus": true,
-  "vsicons.dontShowNewVersionMessage": true,
-  //EasyLESS-extension-VS-Code
-  "less.compile": {
-      "main": "${workspaceRoot}\\src\\styles\\less\\style.less",
-      "compress": false,
-      "sourceMap": false,
-      "out": false,
-      "autoprefixer": "> 5%, last 2 Chrome versions, not ie 6-9"
-  },
+  "prettier.semi": true,
+  "prettier.printWidth": 120,
+  "prettier.singleQuote": true,
+  "prettier.jsxSingleQuote": false,
+  "prettier.tslintIntegration": true,
+  "prettier.eslintIntegration": true,
+  "prettier.stylelintIntegration": true,
+  "vsicons.dontShowNewVersionMessage": true
 }
