--- a/VSCodeUserSettings.json
+++ b/VSCodeUserSettings.json
@@ -12,7 +12,7 @@
   "editor.trimAutoWhitespace": true,
   "editor.snippetSuggestions": "top",
   "editor.quickSuggestions": { "other": true },
-  "explorer.confirmDragAndDrop": false,
+  "explorer.confirmDragAndDrop": true,
   "debug.console.fontSize": 16,
   "markdown.preview.fontSize": 16,
   "terminal.integrated.fontSize": 16,
